--- a/src/Pages/Home/Featured/Featured.css
+++ b/src/Pages/Home/Featured/Featured.css
@@ -2,6 +2,6 @@
     background: linear-gradient(0deg, rgba(21, 21, 21, 0.7), rgba(21, 21, 21, 0.7)), url('../../../assets//home/featured.jpg');
     background-position: center center;
     background-repeat: no-repeat;
-    background-blend-mode: multiply;
     background-size: cover;
+    background-attachment: fixed;
 }
